<resources>
    <string name="app_name">6wd</string>
    <string name="permission_denied">Denied permission!</string>

    <string name="notification_small">Small</string>
    <string name="notification_alert">Alert</string>
    <string name="touch_to_open">Touch to open</string>

    <string name="enable_camera">Enable camera</string>
    <string name="disable_camera">Disable camera</string>
    <string name="lights">Lights</string>
    <string name="led_front">Front LEDs</string>
    <string name="led_back">Back LEDs</string>
    <string name="led_flash">Flash LED</string>
    <string name="minimum_level">0%</string>
    <string name="half_level">50%</string>
    <string name="maximum_level">100%</string>
    <string name="zero_db">-127</string>
    <string name="db">dbm</string>
    <string name="zero">0</string>
    <string name="zero_percent">0%</string>
    <string name="kbps">kbps</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="saved">Saved</string>
    <string name="android_version_incompatible">Android version incompatible!</string>
    <string name="connected">Connected</string>
    <string name="connect">Connect</string>
    <string name="connection">Connection</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="close">Close</string>
    <string name="rssi">Rssi</string>
    <string name="battery">Battery</string>
    <string name="fps">Fps</string>
    <string name="time_zero">00:00</string>
    <string name="fail_record">Record fail!</string>
    <string name="time_on">Time on</string>
    <string name="time_off">Time off</string>
    <string name="time_fifty">50mS</string>
    <string name="change_controller">Change controller</string>

    <string name="speeds">Speeds</string>
    <string name="run_speed">Run speed</string>
    <string name="bend_speed">Bend speed</string>
    <string name="pulsed_rotation">Pulsed rotation</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="angle">Angle</string>
    <string name="power">Power</string>
</resources>