<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <lucns.robot6wd.views.FrameView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/gray" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_4"
        android:alpha="0.75">

        <ImageButton
            android:id="@+id/buttonWifi"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_wifi" />

        <ImageButton
            android:id="@+id/buttonConnection"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_toEndOf="@+id/buttonWifi"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_reconnect" />

        <ImageButton
            android:id="@+id/buttonMenu"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_toEndOf="@+id/buttonConnection"
            android:background="@drawable/fab_transparent"
            android:src="@drawable/icon_more_vertical" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageView"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:text="@string/time_zero"
        android:visibility="invisible" />


    <RelativeLayout
        android:id="@+id/rootRssi"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_5">

        <TextView
            android:id="@+id/textRssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rssi" />

        <TextView
            android:id="@+id/textRssiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textRssi"
            android:text="@string/zero_db"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/textBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_toEndOf="@+id/textRssi"
            android:text="@string/battery" />

        <TextView
            android:id="@+id/textBatteryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFps"
            android:layout_alignStart="@+id/textBattery"
            android:text="@string/zero_percent" />

        <TextView
            android:id="@+id/textFps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_toEndOf="@+id/textBattery"
            android:text="@string/fps" />

        <TextView
            android:id="@+id/textFpsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textFps"
            android:layout_alignStart="@+id/textFps"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/textNetworkVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_toEndOf="@+id/textFps"
            android:text="@string/kbps" />

        <TextView
            android:id="@+id/textNetworkVelocityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textNetworkVelocity"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_toEndOf="@+id/textFps"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/textTx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/textNetworkVelocity"
            android:text="TX"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textRx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTx"
            android:layout_marginStart="@dimen/margin_2"
            android:layout_toEndOf="@+id/textNetworkVelocity"
            android:text="RX"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:id="@+id/centerView"
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/textAngleSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/angleView"
        android:layout_alignStart="@+id/angleView"
        android:layout_alignEnd="@id/angleView"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="64sp" />

    <lucns.robot6wd.views.AngleView
        android:id="@+id/angleView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/centerView"
        android:layout_centerHorizontal="true" />

    <lucns.robot6wd.views.LeverView
        android:id="@+id/controllerOne"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/centerView"
        android:layout_marginBottom="@dimen/margin_3" />
</RelativeLayout>